--- a/Pages/Shared/_ManagementLayout.cshtml
+++ b/Pages/Shared/_ManagementLayout.cshtml
@@ -59,7 +59,7 @@
         }*/
     </style>
 </head>
-<body class="overflow-hidden">
+<body>
     @*<div id="mydiv" class="shadow rounded-circle">
             <div id="mydivheader" class="shadow rounded-circle">
                 <p>Move</p>
@@ -77,10 +77,7 @@
                     <div class="row w-100 ml-0 mr-0">
                         <div class="col">
                             <ul class="navbar-nav flex-grow-1">
-                                <li class="nav-item">
-                                    <a class="nav-link text-decoration-none text-white fs-7" asp-area="" asp-page="/Index" title="">个人工作台</a>
-                                </li>
-                                <li class="nav-item">
+                                @*<li class="nav-item">
                                     <a class="nav-link text-decoration-none text-white fs-7" asp-area="" asp-page="/Products/Index">项目列表</a>
                                 </li>
                                 <li class="nav-item">
@@ -91,27 +88,30 @@
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link text-decoration-none text-white fs-7" asp-area="" asp-page="/Plans/Index">开发管理</a>
-                                </li>
+                                </li>*@
                                 <li class="nav-item">
-                                    <a class="nav-link text-decoration-none text-white fs-7" asp-area="" asp-page="/Clocks/Index">工时统计</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link text-decoration-none text-white fs-7" asp-area="" asp-page="/Creation/Index">新产品研发</a>
+                                    <a class="nav-link text-decoration-none text-white fs-7" asp-area="" asp-page="/Creation/Index">3.0 新产品开发平台</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link text-decoration-none text-white fs-7" asp-area="" asp-page="/Leaks/Index">缺陷列表</a>
                                 </li>
                                 <li class="nav-item">
+                                    <a class="nav-link text-decoration-none text-white fs-7" asp-area="" asp-page="/Clocks/Index">工时统计</a>
+                                </li>
+                                @*<li class="nav-item">
                                     <a class="nav-link text-decoration-none text-white fs-7" asp-area="" asp-page="/Wiki/Index">Wiki</a>
-                                </li>
+                                </li>*@
                                 <li class="nav-item">
-                                    <a class="nav-link text-decoration-none text-white fs-7" asp-area="" asp-page="/Documents/Index">文档附件</a>
+                                    <a class="nav-link text-decoration-none text-white fs-7" asp-area="" asp-page="/Documents/Index">文档及附件</a>
                                 </li>
-                                <li class="nav-item">
+                                @*<li class="nav-item">
                                     <a class="nav-link text-decoration-none text-white fs-7" asp-area="" asp-page="/Helps/Index">使用帮助</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link text-decoration-none text-white fs-7" asp-area="" asp-page="/Privacy">Privacy</a>
+                                </li>*@
+                                <li class="nav-item">
+                                    <a class="nav-link text-decoration-none text-white fs-7" asp-area="" asp-page="/Index" title="">个人工作台</a>
                                 </li>
                             </ul>
                         </div>
