--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -68,7 +68,7 @@
                                                     <a class="nav-link text-decoration-none text-white fs-7 menu-@requestPath.Contains("Plans")" asp-area="" asp-page="/Plans/Index">开发管理</a>
                                                 </li>*@
                                                 <li class="nav-item">
-                                                    <a class="nav-link text-decoration-none text-white fs-7 menu-@requestPath.Contains("Creation")" asp-area="" asp-page="/Creation/Index">3.0 新产品开发平台</a>
+                                                    <a class="nav-link text-decoration-none text-white fs-7 menu-@requestPath.Contains("Creation")" asp-area="" asp-page="/Platform/Index">3.0 新产品开发平台</a>
                                                 </li>
                                                 <li class="nav-item">
                                                     <a class="nav-link text-decoration-none text-white fs-7 menu-@requestPath.Contains("Leaks")" asp-area="" asp-page="/Leaks/Index">缺陷列表</a>
