--- a/Pages/Modules/Create.cshtml
+++ b/Pages/Modules/Create.cshtml
@@ -52,9 +52,9 @@
                 </form>
             </div>
         </div>
-        <input asp-for="Pid" />
-        <div class="mt-2">
-            <a asp-page="/Creation/Index">Back to List</a>
+        <input type="hidden" asp-for="Pid" />
+        <div class="mt-3">
+            <a asp-page="/Creation/Index"><i class="bi bi-arrow-return-left"></i>&nbsp;Back to List</a>
         </div>
     </div>
     @section Scripts {
