--- a/Pages/Modules/Edit.cshtml
+++ b/Pages/Modules/Edit.cshtml
@@ -54,8 +54,8 @@
             </div>
         </div>
 
-        <div>
-            <a asp-page="/Creation/Index">Back to List</a>
+        <div class="mt-3">
+            <a asp-page="/Creation/Index"><i class="bi bi-arrow-return-left"></i>&nbsp;Back to List</a>
         </div>
 
         @section Scripts {
