--- a/Pages/Management/CustomField.cshtml
+++ b/Pages/Management/CustomField.cshtml
@@ -55,7 +55,7 @@
                             <td>
                                 @Html.DisplayFor(modelItem => item.IsRequired)
                             </td>
-                            <td>
+                            <td>-
                                 @*<a asp-page="./Edit" asp-route-id="@item.Id">Edit</a> |
                                 <a asp-page="./Details" asp-route-id="@item.Id">Details</a> |
                                 <a asp-page="./Delete" asp-route-id="@item.Id">Delete</a>*@
@@ -99,10 +99,10 @@
                             <td>
                                 @Html.DisplayFor(modelItem => item.CustomFieldId)
                             </td>
-                            <td>
-                                <a asp-page="./Edit" asp-route-id="@item.Id">Edit</a> |
+                            <td>-
+                                @*<a asp-page="./Edit" asp-route-id="@item.Id">Edit</a> |
                                 <a asp-page="./Details" asp-route-id="@item.Id">Details</a> |
-                                <a asp-page="./Delete" asp-route-id="@item.Id">Delete</a>
+                                <a asp-page="./Delete" asp-route-id="@item.Id">Delete</a>*@
                             </td>
                         </tr>
                     }
