--- a/Pages/Modules/Create.cshtml
+++ b/Pages/Modules/Create.cshtml
@@ -2,64 +2,51 @@
 @model RubyMine.Pages.Modules.CreateModel
 
 @{
-    //Layout = null;
+    Layout = "~/Pages/Shared/_NavicatLayout.cshtml";
 }
 
-<!DOCTYPE html>
-
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title>新增模块</title>
-</head>
-<body>
-    <div class="container-fluid p-3 fs-9">
-        <h4>新增下级</h4>
-        <hr />
-        <div class="row fs-7">
-            <div class="col-md-4">
-                <form method="post" autocomplete="off">
-                    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-                    <div class="form-group">
-                        @Html.DisplayNameFor(model => model.Module.Name)
-                        <input asp-for="Module.Name" class="form-control fs-9" />
-                        <span asp-validation-for="Module.Name" class="text-danger"></span>
-                    </div>
-                    <div class="form-group">
-                        @Html.DisplayNameFor(model => model.Module.Pinyin)
-                        <input asp-for="Module.Pinyin" class="form-control fs-9" />
-                        <span asp-validation-for="Module.Pinyin" class="text-danger"></span>
-                    </div>
-                    <div class="form-group">
-                        @Html.DisplayNameFor(model => model.Module.Disabled)
-                        <input asp-for="Module.Disabled" class="form-control fs-9" readonly />
-                        <span asp-validation-for="Module.Disabled" class="text-danger"></span>
-                    </div>
-                    <div class="form-group">
-                        @Html.DisplayNameFor(model => model.Module.PId)
-                        <input asp-for="Module.PId" class="form-control fs-9" readonly />
-                        <span asp-validation-for="Module.PId" class="text-danger"></span>
-                    </div>
-                    <div class="form-group">
-                        @Html.DisplayNameFor(model => model.Module.Index)
-                        <input asp-for="Module.Index" class="form-control fs-9" readonly />
-                        <span asp-validation-for="Module.Index" class="text-danger"></span>
-                    </div>
-                    <div class="form-group mt-2">
-                        <input type="submit" value="Create" class="btn btn-primary fs-9" />
-                        <input type="submit" asp-page-handler="CreateAndNew" value="创建并继续添加" class="btn btn-primary fs-9" />
-                    </div>
-                    <input asp-for="UrlReferer" class="w-100" type="hidden" />
-                </form>
-            </div>
-        </div>
-        <input type="hidden" asp-for="Pid" />
-        <div class="mt-3">
-            <a href="@Model.UrlReferer"><i class="bi bi-arrow-return-left"></i>&nbsp;Back to List</a>
+<div class="container-fluid p-3 fs-9">
+    <h4>新增下级</h4>
+    <hr />
+    <div class="row fs-7">
+        <div class="col-md-4">
+            <form method="post" autocomplete="off">
+                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                <div class="form-group">
+                    @Html.DisplayNameFor(model => model.Module.Name)
+                    <input asp-for="Module.Name" class="form-control fs-9" />
+                    <span asp-validation-for="Module.Name" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    @Html.DisplayNameFor(model => model.Module.Pinyin)
+                    <input asp-for="Module.Pinyin" class="form-control fs-9" />
+                    <span asp-validation-for="Module.Pinyin" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    @Html.DisplayNameFor(model => model.Module.Disabled)
+                    <input asp-for="Module.Disabled" class="form-control fs-9" readonly />
+                    <span asp-validation-for="Module.Disabled" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    @Html.DisplayNameFor(model => model.Module.PId)
+                    <input asp-for="Module.PId" class="form-control fs-9" readonly />
+                    <span asp-validation-for="Module.PId" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    @Html.DisplayNameFor(model => model.Module.Index)
+                    <input asp-for="Module.Index" class="form-control fs-9" readonly />
+                    <span asp-validation-for="Module.Index" class="text-danger"></span>
+                </div>
+                <div class="form-group mt-2">
+                    <input type="submit" value="Create" class="btn btn-primary fs-9" />
+                    <input type="submit" asp-page-handler="CreateAndNew" value="创建并继续添加" class="btn btn-primary fs-9" />
+                </div>
+                <input asp-for="UrlReferer" class="w-100" type="hidden" />
+            </form>
         </div>
     </div>
-    @section Scripts {
-        @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-    }
-</body>
-</html>
+    <input type="hidden" asp-for="Pid" />
+    <div class="mt-3">
+        <a href="@Model.UrlReferer"><i class="bi bi-arrow-return-left"></i>&nbsp;Back to List</a>
+    </div>
+</div>
