--- a/Pages/Shared/_NavicatLayout.cshtml
+++ b/Pages/Shared/_NavicatLayout.cshtml
@@ -1,11 +1,13 @@
 ﻿@using RubyMine.Models;
 @{
     User cua = SessionUtils.Get<User>(Context.Session, "cua");
+
     bool aleradyLogin = cua != null;
     string requestPath = Context.Request.Path.ToString();
     if (string.IsNullOrEmpty(requestPath.Trim('/')) == false && aleradyLogin == false) {
         Context.Response.Redirect("/");
     }
+
 }
 <!DOCTYPE html>
 <html lang="en">
@@ -17,6 +19,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/64adc7381d.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="/css/wave.css">
 
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
@@ -24,38 +27,34 @@
 
     <link rel="stylesheet" href="~/css/site.css" />
 </head>
-<body class="fs-9 bg-f0f0f0">
-    <div class="row m-0 p-0 bg-f0f0f0 fw-bold lh-lg">
-        <table class="w-auto">
-            <tr>
-                <td class="ps-2"><img class="w-auto" src="/images/xp/application_view_xp_terminal.png" /></td>
-                <td class="pt-1"><span class="fw-bold mt-1">3.0产品开发管理平台</span></td>
-                <td></td>
-            </tr>
-        </table>
-        
-    </div>
+<body class="fs-9">
     <div style="background-image:url('/images/line-dot.png');background-repeat:repeat-x;height:2px;">
         <img src="/images/whitepoint.png" />
     </div>
-    @*<div class="row m-0 p-1 bg-f0f0f0">
-        <a class="btn btn-primary m-0 p-0 text-decoration-none text-center align-middle" style="width:80px;"><span class="fs-9 mb-3">新增需求</span></a>
+    <div class="row m-0 p-0 fw-bold lh-lg bg-f0f0f0">
+        <div class="col-3 ps-1">
+            <img class="w-auto mb-1" src="/images/xp/shield.png" />
+            <a href="/Platform/" class="text-decoration-none fw-normal mr-4" title="返回开发平台主页"><span class="fw-bold mt-1">3.0产品开发管理平台</span></a>
+            @if (aleradyLogin) {
+                <span class="float-none fw-normal"><img src="/images/xp/vcard.png" class="mb-1" />&nbsp;<a href="/Management/About">@cua.Firstname</a>，<a href="/swagger/index.html" target="_blank"><img src="/images/xp/swagger.png" height="16" />&nbsp;Swagger</a></span>
+                @Html.Raw(" - ")<a class="fw-normal" href="/Privacy">Privacy</a>
+            }
+        </div>
+        <div class="col">
+            <div class="float-end fw-normal">四川劳吉克信息技术有限公司&nbsp; - @@RubyMine Powered by Jack Sparrow</div>
+        </div>
     </div>
-    <div style="background-image:url('/images/line-dot.png');background-repeat:repeat-x;height:2px;">
+    <div style="background-image:url('/images/line-dot.png');background-repeat:repeat-x;height:2px;margin-bottom:2px;">
         <img src="/images/whitepoint.png" />
     </div>
-    <div class="row bg-f0f0f0">
-        a
-    </div>*@
-    <div>
+    <div class="ps-1">
         @RenderBody()
     </div>
-    <div class="row m-0 p-0 bg-light">
-        <footer class="@ViewData["showFooter"] text-muted lh-middle mt-2">
-            <div class="container-fluid p-0 fs-7">
-                RubyMine @@ Powered by Jack Sparrow - <a asp-area="" asp-page="/Privacy">Privacy</a> &nbsp;四川劳吉克信息技术有限公司
-            </div>
-        </footer>
+    <div class="mt-1" style="background-image:url('/images/line-dot.png');background-repeat:repeat-x;height:2px;">
+        <img src="/images/whitepoint.png" />
     </div>
+    @*<div style="background-image:url('/images/line-dot.png');background-repeat:repeat-x;height:2px;" class="mt-1">
+            <img src="/images/whitepoint.png" />
+        </div>*@
 </body>
 </html>
