--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -53,7 +53,7 @@
         </div>
     </form>
 }
-<div class="waveWrapper waveAnimation border-bottom border-ccc border-top-fff" style="margin-bottom:23px;margin-top:26px;">
+<div class="waveWrapper waveAnimation">
     <div class="waveWrapperInner bgTop">
         <div class="wave waveTop" style="background-image: url('/images/wave-png/wave-top.png')"></div>
     </div>
