--- a/Pages/Privacy.cshtml
+++ b/Pages/Privacy.cshtml
@@ -5,13 +5,17 @@
     ViewData["Title"] = "Privacy Policy";
     ViewData["showFooter"] = "footer";
 }
-<div class="container-fluid pt-4">
-    <h1>@ViewData["Title"]</h1>
+<div class="container-fluid pt-4 pb-4 border-inset bg-white vh-60">
+    <h3>@ViewData["Title"]</h3>
 
     <p>Use this page to detail your site's privacy policy.</p>
     <p>
-        版权所有：@@四川劳吉克信息技术有限公司
+        版权所有 © 四川劳吉克信息技术有限公司
     </p>
+    <p>
+        技术线路 Ruby、.NET Core
+    </p>
+    <p class="mb-4">数据库 Mysql</p>
 </div>
 <div class="waveWrapper waveAnimation border-bottom border-ccc border-top-fff" style="margin-bottom:23px;margin-top:26px;">
     <div class="waveWrapperInner bgTop">
