--- a/Pages/Modules/Create.cshtml
+++ b/Pages/Modules/Create.cshtml
@@ -5,15 +5,15 @@
     Layout = "~/Pages/Shared/_NavicatLayout.cshtml";
 }
 
-<div class="container-fluid p-3 fs-9">
-    <h4>新增下级</h4>
+<div class="container-fluid p-3 fs-9 bg-white border-inset">
+    <h3>新增&lt;<span class="fw-bold">@Model.ParentModule.Name</span>&gt;下级模块</h3>
     <hr />
     <div class="row fs-7">
         <div class="col-md-4">
             <form method="post" autocomplete="off">
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                 <div class="form-group">
-                    @Html.DisplayNameFor(model => model.Module.Name)
+                     请输入下级模块名称：
                     <input asp-for="Module.Name" class="form-control fs-9" />
                     <span asp-validation-for="Module.Name" class="text-danger"></span>
                 </div>
@@ -38,8 +38,9 @@
                     <span asp-validation-for="Module.Index" class="text-danger"></span>
                 </div>
                 <div class="form-group mt-2">
-                    <input type="submit" value="Create" class="btn btn-primary fs-9" />
-                    <input type="submit" asp-page-handler="CreateAndNew" value="创建并继续添加" class="btn btn-primary fs-9" />
+                    <input type="submit" value="Create" class="btn btn-primary fs-9 p-1" />
+                    <input type="submit" asp-page-handler="CreateAndNew" value="创建并继续添加" class="btn btn-primary fs-9 p-1" />
+        <a class="btn-sm fs-9 border-828790 text-decoration-none float-end" href="@Model.UrlReferer"><i class="bi bi-arrow-return-left"></i>&nbsp;Back to List</a>
                 </div>
                 <input asp-for="UrlReferer" class="w-100" type="hidden" />
             </form>
@@ -47,6 +48,5 @@
     </div>
     <input type="hidden" asp-for="Pid" />
     <div class="mt-3">
-        <a href="@Model.UrlReferer"><i class="bi bi-arrow-return-left"></i>&nbsp;Back to List</a>
     </div>
 </div>
