--- a/Pages/Modules/Edit.cshtml
+++ b/Pages/Modules/Edit.cshtml
@@ -5,8 +5,8 @@
     Layout = "~/Pages/Shared/_NavicatLayout.cshtml";
 }
 
-<div class="container-fluid p-3">
-    <h4>编辑模块</h4>
+<div class="container-fluid p-3 border-inset bg-white">
+    <h4>修改模块</h4>
     <hr />
     <div class="row fs-9pt">
         <div class="col-md-4 fs-9">
@@ -14,7 +14,7 @@
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                 <input type="hidden" asp-for="Module.Id" />
                 <div class="form-group fs-9 mb-1">
-                    @Html.DisplayNameFor(model => model.Module.Name)
+                    模块名称：
                     <input asp-for="Module.Name" class="form-control fs-9" />
                     <span asp-validation-for="Module.Name" class="text-danger"></span>
                 </div>
@@ -25,7 +25,7 @@
                 </div>
                 <div class="form-group mb-1">
                     @Html.DisplayNameFor(model => model.Module.PId)
-                    <input asp-for="Module.PId" class="form-control" />
+                    <input asp-for="Module.PId" class="form-control" readonly/>
                     <span asp-validation-for="Module.PId" class="text-danger fs-9"></span>
                 </div>
                 <div class="form-group mb-1">
@@ -40,6 +40,7 @@
                 </div>
                 <div class="form-group mb-1 mt-2">
                     <input type="submit" value="Save" class="btn btn-primary fs-9" />
+        <a href="@Model.UrlReferer" class="btn-sm fs-9 border-828790 text-decoration-none float-end"><i class="bi bi-arrow-return-left"></i>&nbsp;Back to List</a>
                 </div>
                 <input asp-for="UrlReferer" class="w-100" type="hidden" />
             </form>
@@ -47,6 +48,5 @@
     </div>
 
     <div class="mt-3">
-        <a href="@Model.UrlReferer"><i class="bi bi-arrow-return-left"></i>&nbsp;Back to List</a>
     </div>
 </div>
