--- a/Pages/Privacy.cshtml
+++ b/Pages/Privacy.cshtml
@@ -13,9 +13,9 @@
         版权所有 © 四川劳吉克信息技术有限公司
     </p>
     <p>
-        技术线路 Ruby、.NET Core
+        Ruby、.NET Core，数据库 Mysql
     </p>
-    <p class="mb-4">数据库 Mysql</p>
+    <p class="mb-4"></p>
 </div>
 <div class="waveWrapper waveAnimation border-bottom border-ccc border-top-fff" style="margin-bottom:23px;margin-top:26px;">
     <div class="waveWrapperInner bgTop">
