--- a/Pages/Modules/Edit.cshtml
+++ b/Pages/Modules/Edit.cshtml
@@ -6,41 +6,50 @@
 }
 
 <div class="container-fluid p-3 border-inset bg-white">
-    <h4>修改模块</h4>
+    <div class="row">
+        <div class="col-1"><h4>修改</h4></div>
+        <div class="col pt-2"><a href="@Model.UrlReferer" class="btn-sm fs-9 border-828790 text-decoration-none" style="width:133px"><i class="bi bi-arrow-return-left"></i>&nbsp;Back to Index</a></div>
+    </div>
     <hr />
     <div class="row fs-9pt">
         <div class="col-md-4 fs-9">
             <form method="post" autocomplete="off">
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                 <input type="hidden" asp-for="Module.Id" />
-                <div class="form-group fs-9 mb-1">
-                    模块名称：
-                    <input asp-for="Module.Name" class="form-control fs-9" />
-                    <span asp-validation-for="Module.Name" class="text-danger"></span>
+
+                <div class="row mb-1">
+                    <div class="col-3">模块名称：</div>
+                    <div class="col"><input asp-for="Module.Name" class="form-control fs-9" /></div>
+                    <div class="col"><span asp-validation-for="Module.Name" class="text-danger"></span></div>
                 </div>
-                <div class="form-group mb-1">
-                    @Html.DisplayNameFor(model => model.Module.Pinyin)
-                    <input asp-for="Module.Pinyin" class="form-control fs-9" />
-                    <span asp-validation-for="Module.Pinyin" class="text-danger"></span>
+                <div class="row mb-1">
+                    <div class="col-3">@Html.DisplayNameFor(model => model.Module.Pinyin)</div>
+                    <div class="col"><input asp-for="Module.Pinyin" class="form-control fs-9" /></div>
+                    <div class="col"><span asp-validation-for="Module.Pinyin" class="text-danger"></span></div>
                 </div>
-                <div class="form-group mb-1">
-                    @Html.DisplayNameFor(model => model.Module.PId)
-                    <input asp-for="Module.PId" class="form-control" readonly/>
-                    <span asp-validation-for="Module.PId" class="text-danger fs-9"></span>
+                <div class="row mb-1">
+                    <div class="col-3">@Html.DisplayNameFor(model => model.Module.PId)</div>
+                    <div class="col"><input asp-for="Module.PId" class="form-control" readonly /></div>
+                    <div class="col"><span asp-validation-for="Module.PId" class="text-danger fs-9"></span></div>
                 </div>
-                <div class="form-group mb-1">
-                    @Html.DisplayNameFor(model => model.Module.Disabled)
-                    <input asp-for="Module.Disabled" class="form-control fs-9" readonly />
-                    <span asp-validation-for="Module.Disabled" class="text-danger"></span>
+                <div class="row mb-1">
+                    <div class="col-3">@Html.DisplayNameFor(model => model.Module.Disabled)</div>
+                    <div class="col"><input asp-for="Module.Disabled" class="form-control fs-9" readonly /></div>
+                    <div class="col"><span asp-validation-for="Module.Disabled" class="text-danger"></span></div>
                 </div>
-                <div class="form-group mb-1">
-                    @Html.DisplayNameFor(model => model.Module.Index)
-                    <input asp-for="Module.Index" class="form-control fs-9" readonly />
-                    <span asp-validation-for="Module.Index" class="text-danger"></span>
+                <div class="row mb-1">
+                    <div class="col-3">@Html.DisplayNameFor(model => model.Module.Index)</div>
+                    <div class="col"><input asp-for="Module.Index" class="form-control fs-9" readonly /></div>
+                    <div class="col"><span asp-validation-for="Module.Index" class="text-danger"></span></div>
+                </div>
+                <div class="row mb-2">
+                    <div class="col-3"></div>
+                    <div class="col"><input type="submit" value="Save" class="btn btn-primary fs-9" /></div>
+                    <div class="col"></div>
                 </div>
                 <div class="form-group mb-1 mt-2">
-                    <input type="submit" value="Save" class="btn btn-primary fs-9" />
-        <a href="@Model.UrlReferer" class="btn-sm fs-9 border-828790 text-decoration-none float-end"><i class="bi bi-arrow-return-left"></i>&nbsp;Back to List</a>
+                    
+                    
                 </div>
                 <input asp-for="UrlReferer" class="w-100" type="hidden" />
             </form>
@@ -50,3 +59,8 @@
     <div class="mt-3">
     </div>
 </div>
+<script>
+    $(document).ready(function () {
+        $('#Module_Name').focus();
+    });
+</script>
